# ErrorCorrector

./: .gitignore  README.md  main copy.ipynb  main.ipynb  many_separability_methods.ipynb  pyproject.toml  train.py
models/: resnet18_cifar10_without0.pth  resnet18_cifar10_without1.pth  resnet18_cifar10_without2.pth  resnet18_cifar10_without3.pth  resnet18_cifar10_without4.pth  resnet18_cifar10_without5.pth  resnet18_cifar10_without6.pth  resnet18_cifar10_without7.pth  resnet18_cifar10_without8.pth  resnet18_cifar10_without9.pth
output/: output.csv
src/: dataloader.py  draw_figures.py  pca.py  preprocessing.py  resnet.py  umap_transformer.py
